--- a/templates/admin/comiclist.html.twig
+++ b/templates/admin/comiclist.html.twig
@@ -4,47 +4,38 @@
 
 {% block body %}
 
-<div class="container">
-    <div class="card col p-3 mt-5 panel" id="c4-comic-admin">
-        <h1>Comic Administration</h1>
-        {% for comic in comics %}
-            <div class="row c4-comic-admin-row mb-3 p-3">
-                <div class="col-3">
-                    <div class="row">
-                        <div class="col"><h4>{{ comic.name }}</h4></div>
-                    </div>
-                    <div class="row">
-                        <div class="col">@{{ comic.owner.username }}</div>
-                    </div>
-                </div>
-                <div class="col">
-                    {{ comic.description }}
-                </div>
-                <div class="col-3 text-end">
-                    <div class="btn-group">
-
-                        <a href="/@{{ comic.slug }}" class="btn btn-light" {% if not comic.isactive %}disabled{% endif %}><i class="fas fa-eye"></i></a>
-                        {% if comic.isactive == true and comic.isdeleted == false %}
-                            <a class="btn btn-warning" href="/comic/{{ comic.slug }}/deactivate" title="Deactivate {{ comic.name }}"><i class="fas fa-unlock"></i></a>
-                        {% else %}
-                            {% if comic.isactive == false and comic.isdeleted == false and ('ROLE_ADMIN' in app.user.getRoles() or settings.require_comic_approval == false)%}
-                                <a class="btn btn-light text-dark" href="/comic/{{ comic.slug }}/activate" title="Activate {{ comic.name }}"><i class="fas fa-lock-open"></i></a>
-                            {% else %}
-                                <button class="btn btn-block btn-dark" disabled title="Inactive"><i class="fas fa-lock"></i> Inactive</button>
-                            {% endif %}
-                        {% endif %}
-                        <button class="btn btn-danger comic-delete" data-comic="{{ comic.slug }}" data-comicname="{{ comic.name }}" {% if comic.isactive %}disabled{% endif %} title="Delete {{ comic.name }}"><i class="fas fa-trash"></i></button>
-                    </div>
-                </div>
-            </div>
-
-        {% endfor %}
+<div class="container" xmlns="http://www.w3.org/1999/html">
+    <div class="col-10" id="hb-approve-comics">
+        <h1>Approve Comics</h1>
+        <table class="table table-striped">
+            <thead>
+                <tr>
+                    <th>&nbsp</th>
+                    <th>Comic</th>
+                    <th>Author</th>
+                    <th># Images</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for comic in comics %}
+                    <tr class="{% if comic.approved %}bg-success text-white{% endif %}">
+                        <td><a class="btn {% if comic.approved %}btn-primary{% else %}btn-outline-primary{% endif %}" href="/admin/toggle/comic/{{ comic.id }}"><i class="fas fa-check"></i></a></td>
+                        <td>{{ comic.name }}</td>
+                        <td>{% if comic.user.Name %}{{ comic.user.Name }}{% else %}{{ comic.user.email }}{% endif %}</td>
+                        <td>
+                            <span class="fa-layers fa-fw" >
+                                <i class="fas fa-image"></i>
+                                <span class="fa-layers-text">{{ comic.images|length }}</span>
+                            </span>
+                        </td>
+                    </tr>
+                {% endfor %}
+            </tbody>
+        </table>
     </div>
 </div>
 
-{% include "common/deletecomicmodal.html.twig" %}
 {% endblock %}
-
 
 {% block sidebar %}
     {% include "common/sidebar.html.twig" %}
