--- a/templates/admin/userlist.html.twig
+++ b/templates/admin/userlist.html.twig
@@ -21,7 +21,7 @@
                     {% set isAdmin = true %}
                     {% set isCreator = true %}
                 {% endif %}
-                <div class="row c4-user-admin-row {% if user.deleted  %}text-secondary{% endif %} mb-3" data-user="{{ user.username }}">
+                <div class="row c4-user-admin-row {% if user.deleted  %}text-secondary{% endif %} mb-3" data-user="{{ user.email }}">
                     <div class="col-1 text-end">
                         <span class="fa-stack fa-fw">
                             <i class="fas {{ user.getIcon }} fa-stack-2x"></i>
@@ -34,7 +34,7 @@
                         </span>
                     </div>
                     <div class="col-3">
-                        <a href="/@{{ user.username }}">@{{ user.username }}</a>
+                        <a href="/@{{ user.email }}">@{{ user.email }}</a>
                     </div>
                     <div class="col-3">
                         {{ user.createdon|date("Y-m-d") }}
@@ -61,7 +61,7 @@
                                 </span>
                             </button>
                         {% else %}
-                            <a href="/admin/{% if isCreator %}removerole{% else %}addrole{% endif %}/{{ user.username }}/creator" type="button" class="btn btn-light">
+                            <a href="/admin/{% if isCreator %}removerole{% else %}addrole{% endif %}/{{ user.email }}/creator" type="button" class="btn btn-light">
                                 <span class="fa-stack">
                                     <i class="fas fa-palette fa-stack-2x"></i>
                                     {% if not isCreator %}
@@ -69,7 +69,7 @@
                                     {% endif %}
                                 </span>
                             </a>
-                            <a href="/admin/{% if isAdmin %}removerole{% else %}addrole{% endif %}/{{ user.username }}/admin" type="button" class="btn btn-light">
+                            <a href="/admin/{% if isAdmin %}removerole{% else %}addrole{% endif %}/{{ user.email }}/admin" type="button" class="btn btn-light">
                                 <span class="fa-stack">
                                     <i class="fas fa-screwdriver-wrench fa-stack-2x"></i>
                                     {% if not isAdmin %}
@@ -77,7 +77,7 @@
                                     {% endif %}
                                 </span>
                             </a>
-                            <a href="/admin/{% if user.deleted %}undeleteuser{% else %}deleteuser{% endif %}/{{ user.username }}" type="button" class="btn btn-light">
+                            <a href="/admin/{% if user.deleted %}undeleteuser{% else %}deleteuser{% endif %}/{{ user.email }}" type="button" class="btn btn-light">
                                 <span class="fa-stack">
                                     <i class="fas fa-trash fa-stack-2x"></i>
                                     {% if user.deleted %}
