--- a/templates/dashboard/index.html.twig
+++ b/templates/dashboard/index.html.twig
@@ -6,7 +6,7 @@
     <div class="col align-items-center justify-content-center pt-5">
         <div class="col-10" id="hb-createupdate-hotbox">
             <div class="row mb-3 border-bottom">
-                <h1 class="mb-3">Welcome to {{ settings.servertitle }}</h1>
+                <h1 class="mb-3">Welcome to {{ settings.get('server_name').value }}</h1>
             </div>
             <div class="row">
                 <div class="col border-right">
@@ -15,11 +15,11 @@
                     </div>
                     <div class="row mb-2">
                         <div class="col-4"><b>Owner:</b></div>
-                        <div class="col">{{ settings.serverowner }}</div>
+                        <div class="col">{{ settings.get('server_owner').value }}</div>
                     </div>
                     <div class="row mb-3">
                         <div class="col-4"><b>Url:</b></div>
-                        <div class="col">{{ settings.serverurl }}</div>
+                        <div class="col">{{ settings.get('server_url').value }}</div>
                     </div>
                     <div class="row pt-3 mb-2 mt-2 border-top">
                         <h4>HotBoxes</h4>
@@ -45,7 +45,7 @@
                     <div class="row mb-3">
                         <div class="col">
                             In your website's code, include the following Javascript line:<br/>
-                            <code id="copytext-script">&lt;script language="Javascript" src="{{ settings.serverurl }}/hotbox.js" crossorigin="anonymous"&gt;&lt;/script&gt;</code>
+                            <code id="copytext-script">&lt;script language="Javascript" src="{{ settings.get('server_url').value }}/hotbox.js" crossorigin="anonymous"&gt;&lt;/script&gt;</code>
                             <button class="btn btn-sm btn-primary copytext-button" data-target="copytext-script" title="Copy to Clipboard"><i class="fas fa-copy"></i></button>
                         </div>
                     </div>
@@ -76,30 +76,38 @@
                     {% endif %}
 
                     <div class="row pt-3 mb-2 border-top">
-                        <h4>Upcoming Ads</h4>
+                        <h4>My Upcoming Displays</h4>
                     </div>
                     {% for hotbox in hotboxes %}
-                        <div class="row mb-2">
-                            <div class="col"><h5>{{ hotbox.name }}:</h5></div>
-                        </div>
-                        {% for rotation in hotbox.getUserRotations(app.user) %}
+                        {% if hotbox.getUserRotations(app.user)|length > 0 %}
                             <div class="row mb-2">
-                                <div class="col-4 offset-1"><b>{{ rotation.comic.Name }}:</b></div>
-                                <div class="col rotation-schedule">
-                                    {% if hotbox.rotationFrequency == 'Hour' %}
-                                        {% set sDate = rotation.start|date("H:i") %}
-                                        {% set eDate = rotation.expire|date("H:i") %}
-                                    {% elseif hotbox.rotationFrequency == 'Month' %}
-                                        {% set sDate = rotation.start|date("Y-m") %}
-                                        {% set eDate = rotation.expire|date("Y-m") %}
-                                    {% else %}
-                                        {% set sDate = rotation.start|date("Y-m-d") %}
-                                        {% set eDate = rotation.expire|date("Y-m-d") %}
-                                    {% endif %}
-                                    {{ sDate }} to {{ eDate }}
-                                </div>
+                                <div class="col"><h5>{{ hotbox.name }}:</h5></div>
                             </div>
-                        {% endfor %}
+                            {% for rotation in hotbox.getUserRotations(app.user) %}
+                                <div class="row mb-2">
+                                    <div class="col-4 offset-1"><b>{{ rotation.comic.Name }}:</b></div>
+                                    <div class="col rotation-schedule">
+                                        {% if hotbox.rotationFrequency == 'Hour' %}
+                                            {% set sDate = rotation.start|date("H:i") %}
+                                            {% set eDate = rotation.expire|date("H:i") %}
+                                        {% elseif hotbox.rotationFrequency == 'Minute' %}
+                                            {% set sDate = rotation.start|date("H:i") %}
+                                            {% set eDate = rotation.expire|date("H:i") %}
+                                        {% elseif hotbox.rotationFrequency == '15 Minutes' %}
+                                            {% set sDate = rotation.start|date("H:i") %}
+                                            {% set eDate = rotation.expire|date("H:i") %}
+                                        {% elseif hotbox.rotationFrequency == 'Month' %}
+                                            {% set sDate = rotation.start|date("Y-m") %}
+                                            {% set eDate = rotation.expire|date("Y-m") %}
+                                        {% else %}
+                                            {% set sDate = rotation.start|date("Y-m-d") %}
+                                            {% set eDate = rotation.expire|date("Y-m-d") %}
+                                        {% endif %}
+                                        {{ sDate }} to {{ eDate }}
+                                    </div>
+                                </div>
+                            {% endfor %}
+                        {% endif %}
                     {% endfor %}
                 </div>
 
