--- a/templates/admin/inviteusers.html.twig
+++ b/templates/admin/inviteusers.html.twig
@@ -9,7 +9,7 @@
             <div class="col">
                 <h1>Invite Users</h1>
             </div>
-            <div class="col-2"><a href="/admin/users" class="btn btn-outline-light"><i class="fas fa-users"></i> User Management</a></div>
+            <div class="col-2"><a href="{{ url('app_manageuser') }}" class="btn btn-outline-light"><i class="fas fa-users"></i> User Management</a></div>
         </div>
         <div class="row mb-3">
             <div class="col-4">
