--- a/templates/comic/create.html.twig
+++ b/templates/comic/create.html.twig
@@ -12,7 +12,7 @@
                             <h1 class="h3 mb-3 font-weight-normal">Create/Update Comic</h1>
                         </div>
                         {% if comicform.vars.data.id is not empty %}
-                            <div class="col-2 text-end"><a href="/comic/delete/{{ comicform.vars.data.id }}" class="btn btn-danger"><i class="fas fa-trash fa-2x"></i></a> </div>
+                            <div class="col-2 text-end"><a href="{{ url('app_deletecomic', { id:comicform.vars.data.id })}}" class="btn btn-danger"><i class="fas fa-trash fa-2x"></i></a> </div>
                         {% endif %}
                     </div>
 
@@ -56,17 +56,17 @@
                                             </div>
                                         </div>
                                         <div class="row">
-                                            <form method="POST" enctype="multipart/form-data" action="/comic/uploadimage/{{ comicform.vars.data.id }}/{{ image.id }}">
+                                            <form method="POST" enctype="multipart/form-data" action="{{ url('app_uploadimage', {comicid:comicform.vars.data.id, imageid: image.id  }) }}">
                                                 <input type="file" name="imagefile" class="hidden-file-input" id="comic_image_upload_current_{{ image.id }}" onchange="form.submit()" value="Upload File" />
                                                 <div class="row mt-3">
                                                     <div class="btn-group" role="group">
                                                         <label for="comic_image_upload_current_{{ image.id }}" class="btn btn-primary"><i class="fas fa-upload"></i></label>
                                                         {% if image.active %}
-                                                            <a class="btn btn-secondary" href="/comic/image/deactivate/{{ comicform.vars.data.id }}/{{ image.id }}" title="Image is currently active"><i class="far fa-lightbulb"></i></a>
+                                                            <a class="btn btn-secondary" href="{{ url('app_deactivateimage', { comicid: comicform.vars.data.id, imageid: image.id }) }}" title="Image is currently active"><i class="far fa-lightbulb"></i></a>
                                                         {% else %}
-                                                            <a class="btn btn-outline-secondary" href="/comic/image/activate/{{ comicform.vars.data.id }}/{{ image.id }}" title="Image is currently inactive"><i class="fas fa-lightbulb"></i></a>
+                                                            <a class="btn btn-outline-secondary" href="{{ url('app_activateimage', { comicid: comicform.vars.data.id, imageid: image.id }) }}" title="Image is currently inactive"><i class="fas fa-lightbulb"></i></a>
                                                         {% endif %}
-                                                        <a class="btn btn-danger" href="/comic/image/delete/{{ comicform.vars.data.id }}/{{ image.id }}" title="Delete this image"><i class="fas fa-trash"></i></a>
+                                                        <a class="btn btn-danger" href="{{ url('app_deleteimage', { comicid:comicform.vars.data.id, imageid: image.id }) }}" title="Delete this image"><i class="fas fa-trash"></i></a>
                                                     </div>
                                                 </div>
                                             </form>
@@ -77,7 +77,7 @@
                             {% for i in 1..blankslots %}
                                 <div class="col-4">
                                     <div class="col text-center border p-3 m-1">
-                                        <form method="POST" enctype="multipart/form-data" action="/comic/uploadimage/{{ comicform.vars.data.id }}">
+                                        <form method="POST" enctype="multipart/form-data" action="{{ url('app_uploadimage', {comicid:comicform.vars.data.id }) }}">
                                             <label for="comic_image_upload_new_{{ i }}" class="btn btn-primary"><i class="fas fa-upload"></i> New Image</label>
                                             <input id="comic_image_upload_new_{{ i }}" class="hidden-file-input"  type="file" name="imagefile" onchange="form.submit()" value="Upload File" />
                                         </form>
