--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -23,7 +23,17 @@
 </head>
 <body class="blue">
 <div class="mx-5">
-    <div class="row mt-5">
+    {% if settings.get('brand_header').value != '' or settings.get('brand_header').value is not null %}
+        {% set brand = settings.get('brand_header').value %}
+        <div class="row mt-5">
+            <div class="col-3" id="brand-container">
+                <img src="/storage/_admin/{{ brand|split('/')|last }}" class="img-fluid">
+            </div>
+            <div class="col">
+            </div>
+        </div>
+        {% endif %}
+    <div class="row">
 
         {% if block("sidebar") is not empty %}
             <div class="col-3" id="sidebar-container">
